--- a/app/scss/component/_extrass_class.scss
+++ b/app/scss/component/_extrass_class.scss
@@ -3,7 +3,7 @@
 /* Extrass Class
 -------------------------------------------------------------- */
 .flex {
-    @include flex(flex-start, flex-start);
+    display: flex;
 }
 
 .items-center {
@@ -12,6 +12,38 @@
 
 .items-start {
     align-items: flex-start;
+}
+
+.mb2 {
+    margin-bottom: 2px;
+}
+
+.mb1 {
+    margin-bottom: 1px;
+}
+
+.pt6 {
+    padding-top: 6px;
+}
+
+.mr8 {
+    margin-right: 8px;
+}
+
+.pb4 {
+    padding-bottom: 4px;
+}
+
+.mb--8 {
+    margin-bottom: -8px;
+}
+
+.lh1-2 {
+    line-height: 1.2;
+}
+
+.pr17 {
+    padding-right: 17%;
 }
 
 .items-end {
@@ -24,6 +56,26 @@
 
 .justify-start {
     justify-content: flex-start;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.font-1 {
+    font-family: $font-1;
+}
+
+.mb4 {
+    margin-bottom: 4px;
+}
+
+.mb5 {
+    margin-bottom: 5px;
+}
+
+.overflow-hidden {
+    overflow: hidden;
 }
 
 .justify-end {
@@ -71,6 +123,18 @@
     position: relative;
 }
 
+.mb--5 {
+    margin-bottom: -5px;
+}
+
+.mt--25 {
+    margin-top: -25px;
+}
+
+.m--8 {
+    margin-top: -8px;
+}
+
 .absolute {
     position: absolute;
 }
@@ -79,16 +143,84 @@
     margin-top: 3px;
 }
 
+.z-1 {
+    z-index: 1;
+}
+
 .pb5 {
     padding-bottom: 5px;
+}
+
+.pd-50 {
+    padding: 50px;
+}
+
+.w-96 {
+    width: 96px;
+}
+
+.h-96 {
+    height: 96px;
+}
+
+.max-width-1010 {
+    max-width: 1010px;
 }
 
 .text-spacing-0_5 {
     letter-spacing: 0.5px;
 }
 
+.text-spacing-0_2 {
+    letter-spacing: 0.2px;
+}
+
+.hidden {
+    overflow: hidden;
+}
+
+.mr4 {
+    margin-right: 4px;
+}
+
+.lh-28 {
+    line-height: 28px;
+}
+
 .text-spacing-1 {
     letter-spacing: 1px;
+}
+
+.text-spacing-1_5 {
+    letter-spacing: 1.5px;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.r-50 {
+    right: 50px;
+}
+
+.min-height-31 {
+    min-height: 31px;
+}
+
+.mr8 {
+    margin-right: 8px;
+}
+
+.ml--20 {
+    margin-left: -20px;
+}
+
+.mb8 {
+    margin-bottom: 8px;
+}
+
+.l-50 {
+    left: 50px;
 }
 
 .r-0 {
@@ -109,4 +241,18 @@
 
 .flex-wrap {
     flex-wrap: wrap;
+}
+
+.py-14 {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.mb6 {
+    margin-bottom: 6px;
+}
+
+.px-35 {
+    padding-left: 35px;
+    padding-right: 35px;
 }
