--- a/app/scss/component/_flat-accordion.scss
+++ b/app/scss/component/_flat-accordion.scss
@@ -3,20 +3,8 @@
 /* Accordion
 -------------------------------------------------------------- */
 .flat-accordion {
-    &.max-width-930 {
-        max-width: 930px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    border: 3px solid #3A3B3E;
-    border-radius: 20px;
-    background: $white;
-
     .flat-toggle {
-        padding: 16px 30px 18px;
-        margin-bottom: 21px;
-        border-bottom: 1px solid #E6E6E6;
+        margin-bottom: 15px;
 
         &:last-child {
             margin-bottom: 0;
@@ -24,39 +12,50 @@
         }
 
         .toggle-title {
-            padding-right: 40px;
+            padding: 13px 50px 17px 35px;
             position: relative;
+            background-color: #0e1927;
+            border-radius: 25px;
+            @include flex(center, flex-start);
 
             &:hover {
                 cursor: pointer;
             }
 
             &.active {
+                background-color: $color-2;
+
                 .icon {
-                    transform: rotate(0);
+                    transform: rotate(180deg);
                 }
             }
 
             .icon {
                 position: absolute;
-                right: 0;
-                top: 6px;
+                right: 30px;
+                top: 13px;
                 @include transition3;
-                transform: rotate(180deg);
+                transform: rotate(0);
+
+                i {
+                    font-size: 17px;
+                    color: $color-main;
+                }
             }
 
             .title {
-                text-transform: capitalize;
-                font-weight: 700;
-                font-size: 20px;
-                line-height: 32px;
+                font-family: $font-1;
+                font-weight: 400;
                 margin-bottom: 0;
+                letter-spacing: 0.35px;
+                font-size: 17px;
             }
         }
 
         .toggle-content {
+            padding: 14px 42px 28px 35px;
             display: none;
-            margin-top: 8px; 
+            margin-top: 8px;
         }
-    } 
+    }
 }
