--- a/app/scss/component/_header.scss
+++ b/app/scss/component/_header.scss
@@ -12,13 +12,153 @@
         height: 120px;
 
         .main-nav {
-            left: 250px;
+            left: 20.7%;
         }
     }
 
     .hamburger {
         width: 63px;
         height: 63px;
+        position: relative;
+
+        &.toggle {
+            .content {
+                opacity: 1;
+                visibility: visible;
+                z-index: 10;
+                transform: translateY(0);
+            }
+        }
+
+        .content {
+            @include transition3;
+            opacity: 0;
+            visibility: hidden;
+            z-index: -1;
+            transform: translateY(10px);
+            text-align: center;
+            min-width: 400px;
+            margin-top: 50px;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            padding: 64px 30px 50px;
+            background-color: $white;
+            box-shadow: 0px 8px 27px 0px rgba(0, 0, 0, 0.2);
+            border-radius: 20px;
+
+            .text-500 {
+                font-weight: 500;
+            }
+
+            .icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                background-color: rgb(220, 3, 4);
+                font-size: 20px;
+                color: #fff;
+                position: absolute;
+                right: 18px;
+                top: 14px;
+                width: 37px;
+                height: 37px;
+            }
+
+            .phone {
+                color: $color-2;
+                font-size: 30px;
+                line-height: 40px;
+                font-weight: 600;
+                font-style: italic;
+            }
+
+            .social-style {
+                width: 100%;
+
+                li {
+                    margin: 0 2px;
+
+                    a {
+                        @include flex(center, center);
+                        border-radius: 50%;
+                        background-color: transparent;
+                        width: 42px;
+                        height: 42px;
+
+                        &.active,
+                        &:hover {
+                            background-color: $color-2;
+
+                            i {
+                                color: $white;
+                            }
+
+                            svg {
+                                path {
+                                    fill: $white;
+                                }
+                            }
+                        }
+
+                        i {
+                            color: $color-3;
+                            @include transition3;
+                        }
+
+                        svg {
+                            path {
+                                @include transition3;
+                                fill: $color-3;
+                            }
+                        }
+                    }
+                }
+            }
+
+            ul.list {
+                li {
+                    &.style {
+                        padding-bottom: 26px;
+                        margin-bottom: 23px;
+                    }
+
+                    position: relative;
+                    padding-bottom: 25px;
+                    margin-bottom: 20px;
+
+                    &:last-child {
+                        padding-bottom: 0;
+                        margin-bottom: 0;
+
+                        &::before {
+                            display: none;
+                        }
+                    }
+
+                    &::before {
+                        position: absolute;
+                        content: "";
+                        background-color: $color-main;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        width: 60px;
+                        height: 4px;
+                        bottom: 0;
+                        border-radius: 4px;
+                    }
+
+                    span {
+                        color: #666666;
+
+                        &.color-2 {
+                            color: $color-2;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     &.header-main-nav {
@@ -89,6 +229,10 @@
     }
 
     .social {
+        &.relative {
+            position: relative;
+        }
+
         li {
             margin-left: 16px;
 
@@ -147,6 +291,10 @@
     li {
         position: relative;
         margin-right: 36px;
+
+        &:last-child {
+            margin-right: 0;
+        }
 
         .sub-menu {
             padding: 10px 6px;
