--- a/app/scss/component/_spacing.scss
+++ b/app/scss/component/_spacing.scss
@@ -7,6 +7,7 @@ $spaceamounts: (
     0,
     4,
     5,
+    6,
     8,
     10,
     12,
@@ -18,23 +19,41 @@ $spaceamounts: (
     22,
     24,
     25,
+    26,
+    27,
     28,
     30,
     32,
+    34,
     35,
     36,
     38,
     40,
+    42,
+    44,
     45,
     48,
     50,
+    55,
+    64,
+    67,
+    70,
+    72,
     75,
     76,
+    80,
     84,
+    90,
+    96,
     100,
+    105,
+    110,
+    122,
     123,
+    126,
     120,
-    130
+    130,
+    132
 );
 // Adjust this to include the pixel amounts you need.
 
