--- a/app/scss/component/_swiper.scss
+++ b/app/scss/component/_swiper.scss
@@ -24,7 +24,7 @@
 .swiper-btn {
     position: absolute;
     border-radius: 50%;
-    background-color: rgb(255, 255, 255);
+    background-color: $color-main;
     width: 78px;
     height: 78px;
     @include flex(center, center);
@@ -36,17 +36,19 @@
 
         path {
             @include transition3;
+            fill: $white;
         }
     }
 
     &.swiper-button-disabled,
     &:hover {
-        background-color: $color-main;
+        background-color: $white;
         box-shadow: 0px 0px 18.27px 2.73px rgba(0, 0, 0, 0.2);
 
         svg {
+
             path {
-                fill: $white;
+                fill: $color-3;
             }
         }
     }
@@ -116,4 +118,42 @@
 .swiper-prev-testimonial,
 .swiper-next-testimonial {
     z-index: 9;
+}
+
+.swiper-btn {
+    @include transition3;
+
+    &.btn-prev-product-5,
+    &.btn-next-product-5,
+    &.btn-next-team,
+    &.btn-prev-team {
+
+        svg {
+            path {
+                @include transition3;
+            }
+        }
+
+        &.reverse {
+            svg {
+                transform: rotate(0) !important;
+            }
+        }
+
+        width: 62px;
+        height: 62px;
+
+        svg {
+            width: 35px;
+            height: 35px;
+        }
+    }
+}
+
+.sl-product-wrapper {
+    max-width: 1370px;
+    padding: 0 86px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
